# axis

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  sitemap.xml
404/: index.html
api-reference/: index.html
architecture/: index.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/config/: __init__.py  agents.py  constants.py  env.py  paths.py  theme.py
backend/app/config/db/: __init__.py  _base.py  duckdb.py  eval_db.py  human_signals.py  kpi.py  monitoring.py
backend/app/copilot/: __init__.py  agent.py  orchestrator.py  thoughts.py
backend/app/copilot/graph/: __init__.py  deps.py  nodes.py  state.py
backend/app/copilot/llm/: __init__.py  provider.py
backend/app/copilot/skills/: __init__.py  base.py  loader.py  registry.py
backend/app/copilot/skills/builtin/: __init__.py  analyze.py  compare.py  evaluate.py  query.py  summarize.py
backend/app/models/: align_schemas.py  copilot_schemas.py  database_schemas.py  eval_runner_schemas.py  kpi_schemas.py  report_schemas.py  schemas.py
backend/app/plugins/: __init__.py  types.py
backend/app/plugins/agent_replay/: __init__.py  config.py
backend/app/plugins/agent_replay/models/: __init__.py  replay_schemas.py  review_schemas.py
backend/app/plugins/agent_replay/routers/: replay.py
backend/app/plugins/agent_replay/services/: replay_service.py  review_service.py  search_db.py
backend/app/plugins/memory/: __init__.py  config.py
backend/app/plugins/memory/models/: graph_schemas.py  memory_schemas.py
backend/app/plugins/memory/routers/: graph.py  memory.py
backend/app/plugins/memory/services/: graph_service.py  memory_service.py
backend/app/routers/: ai.py  align.py  analytics.py  config.py  data.py  database.py  eval_runner.py  human_signals.py  kpi.py  monitoring.py  monitoring_analytics.py  reports.py  store.py
backend/app/services/: align_service.py  axion_adapter.py  connection_store.py  data_processor.py  database_service.py  duckdb_store.py  eval_runner_service.py  human_signals_service.py  issue_extractor_service.py  kpi_service.py  signals_display_config.py  sync_engine.py
backend/app/services/db/: __init__.py  _base.py  _postgres.py  _registry.py  _types.py
backend/app/skills/analyze/: SKILL.md  metadata.json
backend/app/skills/compare/: SKILL.md  metadata.json
backend/app/skills/evaluate/: SKILL.md  metadata.json
backend/app/skills/summarize/: SKILL.md  metadata.json
backend/config/: agent_replay.yaml.example  agent_replay_db.yaml.example  agents.yaml.example  duckdb.yaml.example  eval_db.yaml.example  human_signals_db.yaml.example  kpi_db.yaml.example  memory.yaml.example  monitoring_db.yaml.example  signals_metrics.yaml.example  theme.yaml.example
backend/sample_data/: annotation_sample.csv  caliber_hq.csv  eval_runner_sample.csv  human_signals_sample.csv  monitoring_sample.csv
backend/tests/: conftest.py  test_agent_replay.py  test_agent_replay_reviews.py  test_agent_replay_search_db.py  test_app.py  test_config_bootstrap.py
configuration/: index.html
contributing/: index.html
custom/: README.md
deployment/: index.html
development/: index.html
docs/: 404.md  contributing.md  index.md
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  mockup-source-selector.html  next.config.js  (+5 more)
(+431 files in other folders)
