[project]
name = "axis-backend"
version = "0.1.0"
description = "AXIS AI Evaluation Platform - Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "pandas>=2.2.3",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "openai>=1.55.0",
    "orjson>=3.10.0",
    "httpx>=0.28.0",
    "axion[bertopic,langfuse] @ git+https://github.com/ax-foundry/axion.git",
    # AI Copilot dependencies
    "pydantic-ai>=0.0.14",
    "pydantic-graph>=0.0.10",
    "sse-starlette>=2.0.0",
    "anthropic>=0.49.0",
    # Database connectivity
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "duckdb>=1.1.0",
]

[project.optional-dependencies]
graph = [
    "falkordb>=1.0.0",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pandas-stubs>=2.0.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-redirects>=1.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "D",      # pydocstyle (Google-style docstrings)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # one blank line before class docstring (conflicts with D211)
    "D213",   # multi-line summary second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"app/plugins/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = false  # Disabled due to pandas-stubs version differences
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "plotly.*",
    "axion.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.copilot.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
strict = false
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
